--- a/index.html
+++ b/index.html
@@ -1,3 +1,33 @@
+<!--
+This is part of LaunchCode Unit-3 class for front-end development.
+Uses HTML, CSS styling, AJAX, Bootstrap and Javascript.
+Created by Radhakrishnan Pillai for LaunchCode Unit-3.
+-->
+
+<!--  
+This Launchcode unit-3 assaignement addresses one of the classic problems in computer science of how to 
+optimally implement a web page that displays GIFs of the Jackson 5.
+
+The basic goal of this module will be to fetch a GIF from Giphy, and then insert it into the DOM to 
+display it on your page. We'll get into the details shortly, but first, let's play with Giphy for a minute.
+
+
+The main Goals of this project:
+
+- The main page  should provide the user with a form where she can type a search query:
+
+- Upon submitting the form, the user should briefly see an indication that something awesome is about to happen: “Loading” for example.
+
+- After a little while, the user should see a GIF appear!
+
+- If the user clicks the button again, even with the same search term, a new request should be sent, yielding a (probably) new GIF.
+
+- The gif should ideally be relevant to both the user's search term ("dance" in this case) and the Jackson 5 (or at least Michael), but depending on the search term, and just luck-of-the-draw, you might find that only one or the other could be satisfied.
+
+- Finally, it is possible that something might go wrong in the process of making the request. If so, you should report an error to the user, like “No GIF for you”
+
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,10 +36,11 @@
     <script type="text/javascript" src="request-gif.js"></script>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
-    crossorigin="anonymous">
+                           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
+                           crossorigin="anonymous">
 </head>
 <body>
+    
     <div class="container col-md-4 col-md-offset-4">
         <div class="header row">
         <h1>The AJAXson 5</h1>
@@ -19,6 +50,17 @@
         <form id="form-gif-request" >
             <label>What kind of Jackson 5 related gif do you want?</label>
             <input name="tag" type="text"/>
+        </div>
+
+        <div class="row well">
+            <div id="validation-test">
+              Prove you're not a robot by answering this riddle:
+              <br>
+              <div id="alert-box" class="input-group">
+                <input id="riddleAnswer" class="form-control" name="riddleAnswer" type="text"/><span  class="input-group-addon"><strong>Jacksons are better than 1.</strong></span>
+              </div>
+            </div>
+            <p id="feedback" hidden="true"></p>
         </div>
 
             <input  class= "btn btn-primary"  type="submit" value="Get my Gif!" />
